Added Current button

--- a/SustainabilityApp/app/src/main/res/layout/activity_main.xml
+++ b/SustainabilityApp/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,27 @@
         class="com.here.android.mpa.mapping.AndroidXMapFragment"
         android:id="@+id/mapfragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:onClick="currentButton"
+            android:text="Current" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:onClick="resetButton"
+            android:text="Reset" />
+
+    </LinearLayout>
 
 </LinearLayout>
